plugins {
    id 'java'
    id 'org.springframework.boot' version('3.2.2')
    id 'io.spring.dependency-management' version('1.1.4')
    id 'application'
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply plugin: 'application'
    apply from: "${rootDir}/dependencies.gradle"
}

subprojects {
    group 'org.challenge'
    version 'v.0.0.1'
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = 'UTF-8'
        }
    }
}

allprojects {
    repositories {
        mavenCentral()
        google()

    }

    buildscript {
        repositories {
            mavenCentral()

        }
    }

    dependencies {
        implementation libs.springBootWeb
        implementation libs.springBootJpa
        implementation libs.postgresql
        annotationProcessor libs.lombok
        implementation libs.lombok
        implementation libs.openApi
        testImplementation libs.h2

    }


}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}




